--- a/wine data preprocessing.ipynb
+++ b/wine data preprocessing.ipynb
@@ -2,20 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "id": "029be2c7-03e5-4060-aa8e-1cd0fbf7826e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "# Load the CSV file into a DataFrame\n",
-    "df = pd.read_csv(r'D:\\Applied AI solutions\\Sem 1\\Applied Maths\\Term Project\\winequality-red.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c58d31ea-f79d-46e8-ac52-d47746f3d117",
    "metadata": {},
    "outputs": [
     {
@@ -37,22 +25,26 @@
       "4                 11.0                  34.0   0.9978  3.51       0.56   \n",
       "\n",
       "   alcohol  quality  \n",
-      "0      9.4        5  \n",
-      "1      9.8        5  \n",
-      "2      9.8        5  \n",
-      "3      9.8        6  \n",
-      "4      9.4        5  \n"
+      "0      9.4        0  \n",
+      "1      9.8        0  \n",
+      "2      9.8        0  \n",
+      "3      9.8        1  \n",
+      "4      9.4        0  \n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "# Load the CSV file into a DataFrame\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/Sriva29/Wine-Quality-Analysis/refs/heads/main/winequality-red.csv')\n",
+    "df['quality'] = df['quality'].apply(lambda x: 0 if x <= 5 else 1)\n",
     "# Display the first few rows of the DataFrame\n",
     "print(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "b53a9692-721e-4f30-bfea-fba7580e32c8",
    "metadata": {},
    "outputs": [
@@ -82,13 +74,13 @@
       "\n",
       "                pH    sulphates      alcohol      quality  \n",
       "count  1599.000000  1599.000000  1599.000000  1599.000000  \n",
-      "mean      3.311113     0.658149    10.422983     5.636023  \n",
-      "std       0.154386     0.169507     1.065668     0.807569  \n",
-      "min       2.740000     0.330000     8.400000     3.000000  \n",
-      "25%       3.210000     0.550000     9.500000     5.000000  \n",
-      "50%       3.310000     0.620000    10.200000     6.000000  \n",
-      "75%       3.400000     0.730000    11.100000     6.000000  \n",
-      "max       4.010000     2.000000    14.900000     8.000000  \n"
+      "mean      3.311113     0.658149    10.422983     0.534709  \n",
+      "std       0.154386     0.169507     1.065668     0.498950  \n",
+      "min       2.740000     0.330000     8.400000     0.000000  \n",
+      "25%       3.210000     0.550000     9.500000     0.000000  \n",
+      "50%       3.310000     0.620000    10.200000     1.000000  \n",
+      "75%       3.400000     0.730000    11.100000     1.000000  \n",
+      "max       4.010000     2.000000    14.900000     1.000000  \n"
      ]
     }
    ],
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "c19b2b07-fbc9-44c7-bcb7-fa1ab78ff8ad",
    "metadata": {},
    "outputs": [
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "fa8c59ad-4e4a-4fcb-89c6-e4e1f5e8e913",
    "metadata": {},
    "outputs": [
